# water-depth-estimation

./: .env.example  .env.linux  .env.windows  .gitignore  Getting_Started.ipynb  LICENSE  README.md  environment.yml  init_refresh_env.bat  jlite-environment.yml  readme.md  setup.py  start_jupyter_lab.bat
.github/workflows/: build_binder.yml  jupyterlite_deploy.yml
hydrological_connectivity/datatypes/: elevation_source.py  fwdet_outputs.py  hand_outputs.py  hydraulic_model.py  rim_fim_outputs.py  simple_outputs.py  tvd_outputs.py  water_observations.py  zone_definition.py
hydrological_connectivity/definitions/: definitions_generator.py  (+4 more)
mdb_fwdet/: README.md  pyproject.toml  requirements.txt
mdb_fwdet/mdb_fwdet/: bimonth_time_range.py  configuration.py  dask_install_worker_plugin.py  delaunay_triangulation_interpolation_strategy.py  flood_depth_engine.py  flood_depth_layer.py  fwdet_estimator.py  geotiff_utils.py  kriging_interpolation_strategy.py  region.py  region_definition.py  spatial_flood_extent_inputs.py  spatial_input_helper.py  tps_interpolation_strategy.py
mdb_fwdet/mdb_fwdet/tests/: test_fwdet.py  test_fwdet_dask.py
notebooks/: calculate_spot_heights.ipynb  compare_hydraulic_model.ipynb  compare_sets_of_results.ipynb  create_maps_for_floods.ipynb  example_water_depth.ipynb  generate_individual_reports.ipynb  generate_report_data.ipynb  generate_reports.ipynb  water_depth_estimation_HAND.ipynb  water_depth_estimation_RS_DEM.ipynb  water_depth_estimation_RS_DEM.py  water_depth_estimation_TVD.ipynb  water_depth_estimation_simplistic.ipynb
(+36 files in other folders)
